fix: fix wrong color of date picker with status set

--- a/components/date-picker/style/status.less
+++ b/components/date-picker/style/status.less
@@ -10,6 +10,10 @@
   @outlineColor: @primary-color-outline;
 ) {
   &.@{picker-prefix-cls} {
+    .@{picker-prefix-cls}-active-bar {
+      background: @hoverBorderColor;
+    }
+
     &,
     &:not([disabled]):hover {
       background-color: @background-color;
